# bt_audio_player

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/bt_audio/: CMakeLists.txt  README.md  bt_audio_snk.c  bt_audio_src.c
components/bt_audio/decoder/: bt_audio_decoder_raw.c  bt_audio_decoder_wav.c
components/display/: CMakeLists.txt  display.c
components/firebase/: CMakeLists.txt  firebase.c  firebase.h
components/https_client/: CMakeLists.txt  https_client.c  https_client.h
components/sdcard/: CMakeLists.txt  file_scanner.c  sdcard.c
components/sys_monitor/: CMakeLists.txt  sys_monitor.c
components/wifi_manager/: CMakeLists.txt  dns_server.c  ssid_manager.c  wifi_config_ap.c  wifi_manager.c  wifi_station.c
components/wifi_manager/assets/: wifi_configuration.html
components/wifi_manager/include/: dns_server.h  ssid_manager.h  wifi_config_ap.h  wifi_manager.h  wifi_station.h
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c  ui_bt_device_list.c  ui_file_list_custom.c
unit_test/display_test/: CMakeLists.txt  display_test.c  display_test.h  ili9341.c  ili9341.h
unit_test/i2c_slave_int_test/: i2c_slave_int_test.c
unit_test/i2c_slave_test/: i2c_slave_test.c
unit_test/lvgl_test/: CMakeLists.txt  lvgl_test.c  lvgl_test.h
unit_test/max98357_test/: CMakeLists.txt  README.md  convert_audio.py  max98357.c
unit_test/sdcard_player/: CMakeLists.txt  sdcard_player.h  sdcard_raw_player.c
unit_test/sht30_test/: CMakeLists.txt  sht30.c  sht30.h
unit_test/touch_test/: CMakeLists.txt  touch_test.c  touch_test.h
(+20 files in other folders)
